Update 'qninhq46r-python' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-5c33a13a03.fkbc.p3.openshiftapps.com/rhtap/rhtap-qe-python:f3fb2b9317505ad49ad0d28b9524ff0309b74062@sha256:3e63714a9aba5a10722b135f2c1da41dd8fad56228b1a487d4738fb11fbe9317

--- a/components/qninhq46r-python/overlays/development/deployment-patch.yaml
+++ b/components/qninhq46r-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: qninhq46r-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-5c33a13a03.fkbc.p3.openshiftapps.com/rhtap/rhtap-qe-python:f3fb2b9317505ad49ad0d28b9524ff0309b74062@sha256:3e63714a9aba5a10722b135f2c1da41dd8fad56228b1a487d4738fb11fbe9317
+          name: container-image
